@@ -5,14 +5,13 @@
 
 package com.aws.greengrass.componentmanager.plugins;
 
-import com.amazonaws.services.evergreen.AWSEvergreen;
-import com.amazonaws.services.evergreen.model.GetComponentVersionArtifactDeprecatedRequest;
-import com.amazonaws.services.evergreen.model.GetComponentVersionArtifactDeprecatedResult;
+import com.aws.greengrass.componentmanager.ComponentStore;
 import com.aws.greengrass.componentmanager.ComponentTestResourceHelper;
 import com.aws.greengrass.componentmanager.GreengrassComponentServiceClientFactory;
 import com.aws.greengrass.componentmanager.exceptions.PackageDownloadException;
 import com.aws.greengrass.componentmanager.models.ComponentArtifact;
 import com.aws.greengrass.componentmanager.models.ComponentIdentifier;
+import com.aws.greengrass.componentmanager.models.RecipeMetadata;
 import com.aws.greengrass.testcommons.testutilities.GGExtension;
 import com.vdurmont.semver4j.Semver;
 import org.junit.jupiter.api.BeforeEach;
@@ -22,11 +21,13 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import software.amazon.awssdk.services.greengrassv2.GreengrassV2Client;
+import software.amazon.awssdk.services.greengrassv2.model.GetComponentVersionArtifactRequest;
+import software.amazon.awssdk.services.greengrassv2.model.GetComponentVersionArtifactResponse;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.MessageDigest;
@@ -36,7 +37,8 @@ import java.util.Base64;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsStringIgnoringCase;
 import static org.hamcrest.core.Is.is;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.lenient;
@@ -48,18 +50,22 @@ import static org.mockito.Mockito.when;
 @ExtendWith({MockitoExtension.class, GGExtension.class})
 class GreengrassRepositoryDownloaderTest {
     private static final String SHA256 = "SHA-256";
+    private static final String TEST_ARN = "arn";
 
     @Mock
     private HttpURLConnection connection;
 
     @Mock
-    private AWSEvergreen client;
+    private GreengrassV2Client client;
 
     @Mock
     private GreengrassComponentServiceClientFactory clientFactory;
 
+    @Mock
+    private ComponentStore componentStore;
+
     @Captor
-    ArgumentCaptor<GetComponentVersionArtifactDeprecatedRequest> getComponentArtifactRequestArgumentCaptor;
+    ArgumentCaptor<GetComponentVersionArtifactRequest> getComponentVersionArtifactRequestArgumentCaptor;
 
     @BeforeEach
     void beforeEach() {
@@ -74,46 +80,44 @@ class GreengrassRepositoryDownloaderTest {
                 .resolve("monitor_artifact_100.txt");
         String checksum = Base64.getEncoder()
                 .encodeToString(MessageDigest.getInstance(SHA256).digest(Files.readAllBytes(mockArtifactPath)));
-        ComponentArtifact artifact = ComponentArtifact.builder()
-                .algorithm(SHA256)
-                .checksum(checksum)
-                .artifactUri(new URI("greengrass:artifactName"))
-                .build();
+        ComponentArtifact artifact = ComponentArtifact.builder().algorithm(SHA256).checksum(checksum)
+                .artifactUri(new URI("greengrass:774pP05xtua0RCcwj9uALSdAqGr_vC631EdOBkJxnec=/artifact.txt")).build();
         ComponentIdentifier pkgId = new ComponentIdentifier("CoolService", new Semver("1.0.0"));
+
+        lenient().when(componentStore.getRecipeMetadata(pkgId)).thenReturn(new RecipeMetadata(TEST_ARN));
 
         Path testCache = ComponentTestResourceHelper.getPathForLocalTestCache();
         Path saveToPath = testCache.resolve("CoolService").resolve("1.0.0");
         Files.createDirectories(saveToPath);
 
-        GreengrassRepositoryDownloader downloader = spy(new GreengrassRepositoryDownloader(clientFactory,
-                pkgId, artifact, saveToPath));
+        GreengrassRepositoryDownloader downloader =
+                spy(new GreengrassRepositoryDownloader(clientFactory, pkgId, artifact, saveToPath, componentStore));
 
-        // mock requests to get downloadSize and local file name
-        GetComponentVersionArtifactDeprecatedResult result =
-                new GetComponentVersionArtifactDeprecatedResult().withPreSignedUrl("https://www.amazon.com/artifact.txt");
-        when(client.getComponentVersionArtifactDeprecated(getComponentArtifactRequestArgumentCaptor.capture())).thenReturn(result);
-
-        doReturn(connection).when(downloader).connect(any());
-        when(connection.getResponseCode()).thenReturn(HttpURLConnection.HTTP_OK);
-        when(connection.getContentLengthLong()).thenReturn(Files.size(mockArtifactPath));
-        when(connection.getHeaderField("Content-Disposition")).thenReturn("filename=artifact.txt");
         assertThat(downloader.getArtifactFilename(), is("artifact.txt"));
 
-        // mock requests to return partial stream
-        when(connection.getResponseCode()).thenReturn(HttpURLConnection.HTTP_PARTIAL);
-        when(connection.getInputStream()).thenReturn(Files.newInputStream(mockArtifactPath));
+        // mock requests to get downloadSize and local file name
+        GetComponentVersionArtifactResponse result =
+                GetComponentVersionArtifactResponse.builder()
+                        .preSignedUrl("https://www.amazon.com/artifact.txt").build();
+        when(client.getComponentVersionArtifact(getComponentVersionArtifactRequestArgumentCaptor.capture()))
+                .thenReturn(result);
 
-        Path artifactFilePath = saveToPath.resolve("artifact.txt");
+        // mock requests to return partial stream
+        doReturn(connection).when(downloader).connect(any());
+        when(connection.getContentLengthLong()).thenReturn(Files.size(mockArtifactPath));
+        when(connection.getResponseCode()).thenReturn(HttpURLConnection.HTTP_OK)
+                .thenReturn(HttpURLConnection.HTTP_PARTIAL);
+        when(connection.getInputStream()).thenReturn(Files.newInputStream(mockArtifactPath));
 
         downloader.downloadToPath();
 
-        GetComponentVersionArtifactDeprecatedRequest generatedRequest = getComponentArtifactRequestArgumentCaptor.getValue();
-        assertEquals("CoolService", generatedRequest.getComponentName());
-        assertEquals("1.0.0", generatedRequest.getComponentVersion());
-        assertNull(generatedRequest.getScope());
-        assertEquals("artifactName", generatedRequest.getArtifactName());
+        GetComponentVersionArtifactRequest generatedRequest =
+                getComponentVersionArtifactRequestArgumentCaptor.getValue();
+        assertEquals(TEST_ARN, generatedRequest.arn());
+        assertEquals("774pP05xtua0RCcwj9uALSdAqGr_vC631EdOBkJxnec=/artifact.txt", generatedRequest.artifactName());
 
         byte[] originalFile = Files.readAllBytes(mockArtifactPath);
+        Path artifactFilePath = saveToPath.resolve("artifact.txt");
         byte[] downloadFile = Files.readAllBytes(artifactFilePath);
         assertThat(Arrays.equals(originalFile, downloadFile), is(true));
         ComponentTestResourceHelper.cleanDirectory(testCache);
@@ -122,12 +126,14 @@ class GreengrassRepositoryDownloaderTest {
     @Test
     void GIVEN_http_connection_error_WHEN_attempt_download_THEN_retry_called() throws Exception {
         GreengrassRepositoryDownloader.MAX_RETRY = 2;
-        GetComponentVersionArtifactDeprecatedResult result =
-                new GetComponentVersionArtifactDeprecatedResult().withPreSignedUrl("https://www.amazon.com/artifact.txt");
-        when(client.getComponentVersionArtifactDeprecated(any())).thenReturn(result);
+        GetComponentVersionArtifactResponse result =
+                GetComponentVersionArtifactResponse.builder()
+                        .preSignedUrl("https://www.amazon.com/artifact.txt").build();
+        when(client.getComponentVersionArtifact(any(GetComponentVersionArtifactRequest.class))).thenReturn(result);
         ComponentIdentifier pkgId = new ComponentIdentifier("CoolService", new Semver("1.0.0"));
-        GreengrassRepositoryDownloader downloader = spy(new GreengrassRepositoryDownloader(clientFactory,
-                pkgId, ComponentArtifact.builder().artifactUri(new URI("greengrass:binary")).build(), null));
+        lenient().when(componentStore.getRecipeMetadata(pkgId)).thenReturn(new RecipeMetadata(TEST_ARN));
+        GreengrassRepositoryDownloader downloader = spy(new GreengrassRepositoryDownloader(clientFactory, pkgId,
+                ComponentArtifact.builder().artifactUri(new URI("greengrass:binary")).build(), null, componentStore));
         doReturn(connection).when(downloader).connect(any());
         when(connection.getResponseCode()).thenThrow(IOException.class);
 
@@ -143,12 +149,14 @@ class GreengrassRepositoryDownloaderTest {
 
     @Test
     void GIVEN_http_connection_bad_request_WHEN_attempt_download_THEN_download_error_thrown() throws Exception {
-        GetComponentVersionArtifactDeprecatedResult result =
-                new GetComponentVersionArtifactDeprecatedResult().withPreSignedUrl("https://www.amazon.com/artifact.txt");
-        when(client.getComponentVersionArtifactDeprecated(any())).thenReturn(result);
+        GetComponentVersionArtifactResponse result =
+                GetComponentVersionArtifactResponse.builder()
+                        .preSignedUrl("https://www.amazon.com/artifact.txt").build();
+        when(client.getComponentVersionArtifact(any(GetComponentVersionArtifactRequest.class))).thenReturn(result);
         ComponentIdentifier pkgId = new ComponentIdentifier("CoolService", new Semver("1.0.0"));
-        GreengrassRepositoryDownloader downloader = spy(new GreengrassRepositoryDownloader(clientFactory,
-                pkgId, ComponentArtifact.builder().artifactUri(new URI("greengrass:binary")).build(), null));
+        lenient().when(componentStore.getRecipeMetadata(pkgId)).thenReturn(new RecipeMetadata(TEST_ARN));
+        GreengrassRepositoryDownloader downloader = spy(new GreengrassRepositoryDownloader(clientFactory, pkgId,
+                ComponentArtifact.builder().artifactUri(new URI("greengrass:binary")).build(), null, componentStore));
         doReturn(connection).when(downloader).connect(any());
         when(connection.getResponseCode()).thenReturn(HttpURLConnection.HTTP_BAD_REQUEST);
 
@@ -163,20 +171,15 @@ class GreengrassRepositoryDownloaderTest {
     }
 
     @Test
-    void GIVEN_filename_in_disposition_WHEN_attempt_resolve_filename_THEN_parse_filename() throws Exception {
+    void GIVEN_filename_in_uri_WHEN_attempt_resolve_filename_THEN_parse_filename() {
         String filename = GreengrassRepositoryDownloader
-                .extractFilename(new URL("https://www.amazon.com/artifact.txt"),
-                "attachment; " + "filename=\"filename.jpg\"");
-
-        assertThat(filename, is("filename.jpg"));
+                .getArtifactFilename(ComponentArtifact.builder().artifactUri(URI.create("greengrass:abcd.jj")).build());
+        assertThat(filename, is("abcd.jj"));
+        filename = GreengrassRepositoryDownloader
+                .getArtifactFilename(ComponentArtifact.builder().artifactUri(URI.create("greengrass:abcd")).build());
+        assertThat(filename, is("abcd"));
+        filename = GreengrassRepositoryDownloader.getArtifactFilename(
+                ComponentArtifact.builder().artifactUri(URI.create("greengrass:jkdfjk/kdjfkdj/abcd.jj")).build());
+        assertThat(filename, is("abcd.jj"));
     }
-
-    @Test
-    void GIVEN_filename_in_url_WHEN_attempt_resolve_filename_THEN_parse_filename() throws Exception {
-        String filename = GreengrassRepositoryDownloader
-                .extractFilename(new URL("https://www.amazon.com/artifact.txt?key=value"), "attachment");
-
-        assertThat(filename, is("artifact.txt"));
-    }
-
 }
